--- a/server/public/views/choose.html
+++ b/server/public/views/choose.html
@@ -5,5 +5,5 @@
 <div class="choose">
     <p>What would you like to do?</p>
     <button><a href="/save">SAVE A LEFTOVER</a></button>
-    <button><a href="/view">SHOW MY LEFTOVERS</a></button>
+    <button><a href="/show">SHOW MY LEFTOVERS</a></button>
 </div>
