--- a/server/public/views/show.html
+++ b/server/public/views/show.html
@@ -8,7 +8,7 @@
 
 <div>
 <label>
-    <input type="checkbox" ng-model="toDelete">
+    <input type="checkbox" ng-click="toDelete()" ng-model="toDelete">
     {{leftover.foodItem}} ~ saved on {{leftover.entryDate | date: 'EEEE, MMMM d, y hh:mm a'}}
 </label>
 </div>
