--- a/server/public/views/show.html
+++ b/server/public/views/show.html
@@ -6,11 +6,13 @@
 <div class="well" ng-repeat="leftover in leftovers">
 
 
-<div>
-<label>
-    <input type="checkbox" ng-click="toDelete()" ng-model="toDelete">
-    {{leftover.foodItem}} ~ saved on {{leftover.entryDate | date: 'EEEE, MMMM d, y hh:mm a'}}
-</label>
-</div>
+    <div>
+        <label>
+
+            <input type="checkbox" ng-click="toDelete()" ng-model="toDelete">
+            <input type="checkbox" ng-model="toDelete">
+            {{leftover.foodItem}} ~ saved on {{leftover.entryDate | date: 'EEEE, MMMM d, y hh:mm a'}}
+        </label>
+    </div>
 
 </div>
