--- a/server/public/views/choose.html
+++ b/server/public/views/choose.html
@@ -1,9 +1,11 @@
 <div class="jumbotron">
-    <h1>WELCOME TO LEFTOVER SAVER!</h1>
-
-</div>
-<div class="choose">
-    <p>What would you like to do?</p>
-    <button><a href="/save">SAVE A LEFTOVER</a></button>
-    <button><a href="/show">SHOW MY LEFTOVERS</a></button>
+    <div class="logo">
+        <h1>LEFTOVER</h1>
+        <h2 class="rotate">Saver!</h2>
+    </div>
+    <div class="choose">
+        <label>WHAT WOULD YOU LIKE TO DO?:</label>
+        <button><a href="/save">SAVE A LEFTOVER</a></button>
+        <button><a href="/show">SHOW MY LEFTOVERS</a></button>
+    </div>
 </div>
