--- a/server/public/views/save.html
+++ b/server/public/views/save.html
@@ -1,11 +1,15 @@
 <div class="jumbotron">
-    <h1>WELCOME TO LEFTOVER SAVER!</h1>
-</div>
+    <div class="logo">
+        <h1>LEFTOVER</h1>
+        <h2 class="rotate">Saver!</h2>
+    </div>
 
-<div class="save">
-    <label for="foodItem">FOOD ITEM:</label>
-    <input type="text" ng-model="data.leftover.foodItem" placeholder="FOOD ITEM">
-    <label for="entryDate">PREPARED DATE (LEAVE BLANK TO DEFAULT TO NOW)</label>
-    <input type="datetime-local" ng-model="data.leftover.entryDate" placeholder="MM-DD-YYYY HH:MM">
-    <button ng-click="saveLeftover()">SUBMIT</button>
+    <div class="save">
+        <label for="foodItem">FOOD ITEM:</label>
+        <input type="text" ng-model="data.leftover.foodItem" placeholder="FOOD ITEM">
+        <label for="entryDate">PREPARED DATE (LEAVE BLANK TO DEFAULT TO NOW):</label>
+        <input type="datetime-local" ng-model="data.leftover.entryDate" placeholder="MM-DD-YYYY HH:MM">
+        <button ng-click="saveLeftover()">SUBMIT</button>
+    </div>
+
 </div>
