--- a/server/public/views/show.html
+++ b/server/public/views/show.html
@@ -1,18 +1,13 @@
 <div class="jumbotron">
-    <h1>WELCOME TO LEFTOVER SAVER!</h1>
-</div>
-
-
-<div class="well" ng-repeat="leftover in leftovers">
-
-
-    <div>
-        <label>
-
-            <input type="checkbox" ng-click="toDelete()" ng-model="toDelete">
-            <input type="checkbox" ng-model="toDelete">
-            {{leftover.foodItem}} ~ saved on {{leftover.entryDate | date: 'EEEE, MMMM d, y hh:mm a'}}
-        </label>
+    <div class="logo">
+        <h1>LEFTOVER</h1>
+        <h2 class="rotate">Saver!</h2>
     </div>
 
+<div class="well clearfix" ng-repeat="leftover in leftovers">
+
+            {{leftover.foodItem}} ~ saved on {{leftover.entryDate | date: 'EEEE, MMMM d, y hh:mm a'}}
+            <button class="delete pull-right" ng-click="toDelete(leftover)">DELETE</button>
+
+</div>
 </div>
