--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="routeApp">
 <head>
+    <meta name="viewport" content="width=320, initial-scale=1">
     <meta charset="UTF-8">
     <title>Leftover Saver</title>
     <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,7 +15,6 @@
     <div ng-controller="LoginController">
 
         <div ng-view></div>
-        <!--img class="mainimage" src="./images/IMG_5688.jpg"-->
 
     </div>
 
