--- a/server/public/views/login.html
+++ b/server/public/views/login.html
@@ -1,5 +1,8 @@
 <div class="jumbotron">
-    <h1>WELCOME TO LEFTOVER SAVER!</h1>
+    <div class="logo">
+        <h1>LEFTOVER</h1>
+        <h2 class="rotate">Saver!</h2>
+    </div>
     <div class="login">
         <label for="username">USERNAME:</label>
         <input type="text" ng-model="data.username" placeholder="USERNAME">
