--- a/server/public/views/registerConfirm.html
+++ b/server/public/views/registerConfirm.html
@@ -1,7 +1,12 @@
 <div class="jumbotron">
-    <h1>WELCOME TO LEFTOVER SAVER!</h1>
-    <div class="input">
+    <div class="logo">
+        <h1>LEFTOVER</h1>
+        <h2 class="rotate">Saver!</h2>
+    </div>
+    <div class="login">
+        <label for="username">USERNAME:</label>
         <input type="text" ng-model="data.username" placeholder="USERNAME">
+        <label for="password">PASSWORD:</label>
         <input type="password" ng-model="data.password" placeholder="PASSWORD">
         <button ng-click="logIn()">LOGIN</button>
     </div>
