--- a/server/public/views/choose.html
+++ b/server/public/views/choose.html
@@ -3,7 +3,7 @@
         <h1>LEFTOVER</h1>
         <h2 class="rotate">Saver!</h2>
     </div>
-    <div class="choose">
+    <div class="choose floatRightSetMargin">
         <label>WHAT WOULD YOU LIKE TO DO?:</label>
         <button><a href="/save">SAVE A LEFTOVER</a></button>
         <button><a href="/show">SHOW MY LEFTOVERS</a></button>
