--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -12,11 +12,8 @@
     <base href="/">
 </head>
 <body>
-    <div ng-controller="LoginController">
-
+    <div>
         <div ng-view></div>
-
     </div>
-
 </body>
 </html>
