--- a/server/public/views/register.html
+++ b/server/public/views/register.html
@@ -3,7 +3,7 @@
         <h1>LEFTOVER</h1>
         <h2 class="rotate">Saver!</h2>
     </div>
-    <div class="login">
+    <div class="login floatRightSetMargin">
         <label for="username">USERNAME:</label>
         <input type="text" ng-model="data.username" placeholder="USERNAME">
         <label for="password">PASSWORD:</label>
