--- a/server/public/views/choose.html
+++ b/server/public/views/choose.html
@@ -5,7 +5,7 @@
     </div>
     <div class="choose floatRightSetMargin">
         <label>WHAT WOULD YOU LIKE TO DO?:</label>
-        <button><a href="/save">SAVE A LEFTOVER</a></button>
-        <button><a href="/show">SHOW MY LEFTOVERS</a></button>
+        <a href="/save"><button>SAVE A LEFTOVER</button></a>
+        <a href="/show"><button>SHOW MY LEFTOVERS</button></a>
     </div>
 </div>
