--- a/server/public/views/login.html
+++ b/server/public/views/login.html
@@ -9,6 +9,7 @@
         <label for="password">PASSWORD:</label>
         <input type="password" ng-model="data.password" placeholder="PASSWORD">
         <button ng-click="logIn()">LOGIN</button>
-        <button><a href="/register">NEW TO LEFTOVER SAVER? REGISTER HERE</a></button>
+        <!-- This is what I changed for the agree view -->
+        <a href="/agree"><button>NEW TO LEFTOVER SAVER? REGISTER HERE</button></a>
     </div>
 </div>
