--- a/server/public/views/show.html
+++ b/server/public/views/show.html
@@ -3,6 +3,9 @@
         <h1>LEFTOVER</h1>
         <h2 class="rotate">Saver!</h2>
     </div>
+    <div class="login floatRightSetMargin">
+      <a href="/choose"><button>BACK</button></a>
+    </div>
 </div>
 <div class="well clearfix" ng-repeat="leftover in leftovers">
       {{leftover.foodItem}} ~ saved on {{leftover.entryDate | date: 'EEEE, MMMM d, y hh:mm a'}}
