--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="routeApp">
 <head>
-    <meta name="viewport" content="width=320, initial-scale=1">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <meta charset="UTF-8">
     <title>Leftover Saver</title>
     <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
