style agree.html, clean up white space and comments

--- a/server/public/views/agree.html
+++ b/server/public/views/agree.html
@@ -1,19 +1,19 @@
-<div class="jumbotron">
+<div class="jumbotron row col-xs-8 col-sm-8 col-md-8 col-lg-12">
     <div class="logo">
         <h1>LEFTOVER</h1>
         <h2 class="rotate">Saver!</h2>
     </div>
     <div>
-      <div class="message well row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="message well clearfix">
         <p>Welcome to Leftover Saver!</p>
         <p>Leftover Saver! will help you prevent food waste by allowing you to log when you created that last culinary masterpiece that you were unable to finish. After registering you can enter any food item with the preparation date into the Save A Leftover view as you enter it into the refrigerator. Later simply log in and View Your Leftovers to get a list of all your logged leftovers.</p>
       </div>
-      <div class="agreement well row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="agreement well clearfix">
         <p>Leftover Saver! makes no claims of preventing food waste and assumes no responsibility for food borne illnesses.</p>
         <p>By clicking "I agree" you agree to these terms.</p>
         <a href="/register"><button class="pull-right">I AGREE</button></a>
       </div>
-      <div class="update well row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="update well clearfix">
         <p>UPDATE: The email/text message reminder feature is currently under renovation.</p>
       </div>
 
