--- a/server/public/views/registerConfirm.html
+++ b/server/public/views/registerConfirm.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron row col-xs-8 col-sm-8 col-md-8 col-lg-12">
     <div class="logo">
         <h1>LEFTOVER</h1>
         <h2 class="rotate">Saver!</h2>
