--- a/server/public/views/show.html
+++ b/server/public/views/show.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron row col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="logo">
         <h1>LEFTOVER</h1>
         <h2 class="rotate">Saver!</h2>
