--- a/server/public/assets/styles/styles.css
+++ b/server/public/assets/styles/styles.css
@@ -14,8 +14,7 @@
 
 /*Element styling*/
 body {
-    /*background-image: image-url("../../images/IMG_5688.jpg");*/
-    background-image: url("../../images/IMG_5688.jpg");
+    background-image: url("../../images/IMG_5688.JPG");
     background-size: 100%;
 }
 
