--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -6,6 +6,8 @@
     <title>Leftover Saver</title>
     <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/styles/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo+2:800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <script src="vendors/angular/angular.min.js"></script>
     <script src="vendors/angular-route/angular-route.min.js"></script>
     <script src="assets/scripts/client.min.js"></script>
@@ -14,7 +16,7 @@
 <body>
 
     <div ng-view></div>
-    
+
 
 </body>
 </html>
